--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
 					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
 				</div>
 				<div id="profileImage" >
-					<img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh">
+					<img src="assets/memoji1.png" alt="Benjamin Dinh">
+					<!-- <img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh"> -->
 				</div>
 			</div>
 		</section>
@@ -329,7 +330,6 @@
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
 		</section>
-		
 		<script src="script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
