--- a/index.html
+++ b/index.html
@@ -334,6 +334,11 @@
 		
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script src="rellax.min.js"></script>
+<script>
+  // Accepts any class name
+  var rellax = new Rellax('.rellax');
+</script>
 		<script>
 		$(function() {
 			// COLLAPSE ACCORDION ON PAGE LOAD
