--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
-								<h2>Automobile Price Predictor</h2>
+								<h2>Car Price Predictor</h2>
 								<p class="subtitle_date">October 2020</p>
 							</div>
 							<div class="dropdownArrow">
