--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="vl"></div>
 		</div>
 		<section id="header">
-			<div id="headerText" class="fadein rellax" data-rellax-speed="-4">
+			<div id="headerText" class="fadein">
 			  	<h1>Hi, my name is 
 				  <b id="name">Benjamin</b>
 				  <br> I am a software developer.
@@ -327,7 +327,6 @@
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
 		</section>
-		<script src="rellax.min.js"></script>
 		<script src="script.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
