--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
 					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
 				</div>
 				<div id="profileImage" >
-					<!-- <img src="assets/memoji1.png" alt="Benjamin Dinh"> -->
-					<img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh">
+					<img src="assets/memoji1.png" alt="Benjamin Dinh">
+					<!-- <img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh"> -->
 				</div>
 			</div>
 		</section>
@@ -334,10 +334,6 @@
 
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-  // Accepts any class name
-  var rellax = new Rellax('.rellax');
-</script>
 		<script>
 		$(function() {
 			// COLLAPSE ACCORDION ON PAGE LOAD
