section header fix

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			</div>
 		</section>
 		<section id="archive">
-			<p class = "projectSectionTitle">More Fun Work</p>
+			<p class = "projectSectionTitle">More Fun Projects</p>
 			<div id = "projectArchiveContainer">
 				<div class="acc">
 					<div class="projectArchive">
