revised project tags

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								<div class="projecttag">ReactJS</div>
 								<div class="projecttag">NodeJS</div>
 								<div class="projecttag">CSS</div>
-								<div class="projecttag">Figma</div>
+								<div class="projecttag">Google Log-In</div>
 							</div>
 							<div class="projectbuttons">
 								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
