fixed info for a project

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<h2>Tuberculosis Drug Resistance</h2>
 							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
 							<p class="subtitle_date">Fall 2020</p>
-							<p class="subtitle">Built 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
+							<p class="subtitle">Collaborated with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
