font change, deletion of projects

--- a/index.html
+++ b/index.html
@@ -71,6 +71,26 @@
 				<div class="row">
 					<div class = "projectSelect">
 						<div>
+							<h2>MealBuddies</h2>
+							<p class="subtitle_bold">A web application that targets food insecurity</p>
+							<p class="subtitle_date">January 2021</p>
+							<p class="subtitle">Managed a team of 2 designers and 2 developers in launching an online platform that consolidates food resources in Yolo County. Used a Firebase Realtime Database to store information about local food distributions, open pantries, restaurant giveaways, etc.</p>
+						</div>
+						<div class="buttonrow">
+							<div class ="tagrow">
+								<div class="projecttag">Figma</div>
+								<div class="projecttag">HTML</div>
+								<div class="projecttag">CSS</div>
+								<div class="projecttag">NodeJS</div>
+								<div class="projecttag">Firebase</div>
+							</div>
+							<div class="projectbuttons">
+								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/meal-buddies"></a>
+							</div>
+						</div>
+					</div>
+					<div class = "projectSelect">
+						<div>
 							<h2>Tuberculosis Drug Resistance</h2>
 							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
 							<p class="subtitle_date">Fall 2020</p>
@@ -87,24 +107,6 @@
 							</div>
 						</div>
 					</div>	
-					<div class = "projectSelect">
-						<div>
-							<h2>Tweet Sentiment Analysis</h2>
-							<p class="subtitle_bold">An NLP model that classifies tweets based on polarity of opinion</p>
-							<p class="subtitle_date">December 2020</p>
-							<p class="subtitle">Cleaned, normalized, and tokenized US airline tweets and created a term frequency-inverse document frequency (TF-IDF) matrix. Split the data into testing/training sets and performed logistic regression. Yielded an overall 80% accuracy rate.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">Python</div>
-								<div class="projecttag">Sklearn</div>
-								<div class="projecttag">NLTK</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/"></a>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div class="row">
 					<div class = "projectSelect">
@@ -129,12 +131,13 @@
 					<div class = "projectSelect">
 						<div>
 							<h2>UC Davis Yearbook</h2>
-							<p class="subtitle_bold">A virtual place to store memories for the graduating class of 2020</p>
+							<p class="subtitle_bold">A virtual place to store memories for the graduating class</p>
 							<p class="subtitle_date">May 2020</p>
 							<p class="subtitle">Directed 2 web developers in building a website where users can log in and upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the user interface for technical feasibility. Built a profile feed that can be filtered by college, major, name, etc.</p>
 						</div>
 						<div class="buttonrow">
 							<div class ="tagrow">
+								<div class="projecttag">Figma</div>
 								<div class="projecttag">ReactJS</div>
 								<div class="projecttag">NodeJS</div>
 								<div class="projecttag">CSS</div>
@@ -155,31 +158,6 @@
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
-								<h2>MealBuddies</h2>
-								<p class="subtitle_date">January 2021</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">Managed a team of 2 designers and 2 developers in launching an online platform that targets food insecurity in Yolo County. Used a Firebase Realtime Database to store information about local food distributions, open pantries, restaurant giveaways, etc.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">HTML</div>
-									<div class="projecttag">CSS</div>
-									<div class="projecttag">NodeJS</div>
-									<div class="projecttag">Firebase</div>
-								</div>
-								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/meal-buddies"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
 								<h2>Personal Website</h2>
 								<p class="subtitle_date">December 2020</p>
 							</div>
@@ -191,10 +169,10 @@
 							<p class="subtitle">A portfolio website where I can express myself visually and play around with new design trends. Achieved 300% increase in monthly impressions and clicks after website redesign.</p>
 							<div class="buttonrow">
 								<div class ="tagrow">
+									<div class="projecttag">Figma</div>
 									<div class="projecttag">HTML</div>
 									<div class="projecttag">CSS</div>
 									<div class="projecttag">JavaScript</div>
-									<div class="projecttag">Figma</div>
 								</div>
 								<div class="projectbuttons">
 									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/benjamin-dinh.github.io"></a>
@@ -202,7 +180,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="projectArchive">
+					<!-- <div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Fruit Classification</h2>
@@ -224,10 +202,59 @@
 								</div>
 							</div>
 						</div>
+					</div> -->
+					<div class="projectArchive">
+						<div class="acc__title">
+							<div>
+								<h2>includedavis.com</h2>
+								<p class="subtitle_date">August 2020</p>
+							</div>
+							<div class="dropdownArrow">
+								<a class="fa fa-angle-down custom-down"></a>
+							</div>
+						</div>
+						<div class="acc__panel">
+							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 150% increase in website traffic.</p>
+							<div class="buttonrow">
+								<div class ="tagrow">
+									<div class="projecttag">Figma</div>
+									<div class="projecttag">HTML</div>
+									<div class="projecttag">CSS</div>
+									<div class="projecttag">NodeJS</div>
+								</div>
+								<div class="projectbuttons">
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
+								</div>
+							</div>
+						</div>
 					</div>
 			  	</div>
 				<div class="acc">
 					<div class="projectArchive">
+						<div class="acc__title">
+							<div>
+								<h2>Tweet Sentiment Analysis</h2>
+								<p class="subtitle_date">December 2020</p>
+							</div>
+							<div class="dropdownArrow">
+								<a class="fa fa-angle-down custom-down"></a>
+							</div>
+						</div>
+						<div class="acc__panel">
+							<p class="subtitle">Cleaned, normalized, and tokenized US airline tweets and created a term frequency-inverse document frequency (TF-IDF) matrix. Split the data into testing/training sets and performed logistic regression. Yielded an overall 80% accuracy rate.</p>
+							<div class="buttonrow">
+								<div class ="tagrow">
+									<div class="projecttag">Python</div>
+									<div class="projecttag">Sklearn</div>
+									<div class="projecttag">NLTK</div>
+								</div>
+								<div class="projectbuttons">
+									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/"></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- <div class="projectArchive">
 						<div class="acc__title">
 							<div>
 								<h2>Car Price Predictor</h2>
@@ -250,31 +277,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
-								<h2>includedavis.com</h2>
-								<p class="subtitle_date">August 2020</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 150% increase in website traffic.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">HTML</div>
-									<div class="projecttag">CSS</div>
-									<div class="projecttag">NodeJS</div>
-								</div>
-								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
-								</div>
-							</div>
-						</div>
-					</div>
+					</div> -->
 					<div class="projectArchive">
 						<div class="acc__title">
 							<div>
