--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 		<div id="rightIcons">
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-			<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
+			<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
 			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
-			<div class="vl"></div>
 		</div>
 		<section id="header">
 			<div id="headerText" class="fadein">
@@ -315,8 +314,8 @@
 					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
 				</div>
 				<div id="profileImage" >
-					<!-- <img src="assets/memoji1.png" alt="Benjamin Dinh"> -->
-					<img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh">
+					<img src="assets/memoji1.png" alt="Benjamin Dinh">
+					<!-- <img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh"> -->
 				</div>
 			</div>
 		</section>
@@ -325,7 +324,7 @@
 			<div id="bottomIcons">
 				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-				<a href="https://www.instagram.com/tiggersparty/" class="fab fa-instagram zoom"></a>
+				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
 				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
