--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
 		</div>
 		<section id="header">
 			<div id="headerText" class="fadein">
-			  	<h1>Hi, my name is 
-				  <b id="name">Benjamin</b>
-				  <br> I am a software developer.
-				</h1>
+			  	<h1>Nice to meet you, <br> I'm <b id="name">Benjamin</b>.</h1>
+				<h1 id="headerSubText">I design and develop meaningful interactions and experiences.</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjamindinh909@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
