--- a/index.html
+++ b/index.html
@@ -305,8 +305,7 @@
 			<p class = "projectSectionTitle">About Me</p>
 			<div id="profileContainer">
 				<div id="profileText">
-					<h2 class="customsubtitle">Nice to meet you!</h2>
-					<p class="subtitle">I'm Benjamin and I'm a third year at University of California, Davis studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
+					<p class="subtitle">Nice to meet you, I'm Benjamin! I'm a third year at University of California, Davis studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
 					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
 					<p class="subtitle">Away from the computer, you will likely find me chilling with my cat Tigger, drinking an iced latte, or enjoying the great outdoors.</p>
 					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
