hide navbar on scroll

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 			</nav>
 		</div>
-		<div id="rightIcons">
+		<div id="leftIcons">
 			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
 			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
 			<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
