--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<a class="nav-link js-scroll-trigger" href="#work">Work</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="#about">About</a>
+							<a class="nav-link js-scroll-trigger" href="/about">About</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link js-scroll-trigger categorytag" href="assets/BenjaminDinhResume.pdf">Resume</a>
@@ -300,22 +300,6 @@
 			  	</div>
 			</div>	
 		</section>
-		<div id="about"></div>
-		<section>
-			<p class = "projectSectionTitle">About Me</p>
-			<div id="profileContainer">
-				<div id="profileText">
-					<p class="subtitle">Nice to meet you, I'm Benjamin! I'm a third year at University of California, Davis studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
-					<p class="subtitle">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
-					<p class="subtitle">Away from the computer, you will likely find me chilling with my cat Tigger, drinking an iced latte, or enjoying the great outdoors.</p>
-					<p class="subtitle">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
-				</div>
-				<div id="profileImage" >
-					<img src="assets/memoji1.png" alt="Benjamin Dinh">
-					<!-- <img src="assets/headshot.jpg" class="circleShadow" alt="Benjamin Dinh"> -->
-				</div>
-			</div>
-		</section>
 		
 		<section id="footer">
 			<div id="bottomIcons">
@@ -326,7 +310,7 @@
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
 		</section>
-		<script src="script.js"></script>
+		<script src="index.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
