--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 	<body>
 		<div id='navigationContainer'>
 			<nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light">
-				<a class="navbar-brand js-scroll-trigger" href="#" id="navigationName">Benjamin Dinh</a>
+				<a class="navbar-brand js-scroll-trigger" href="/" id="navigationName">Benjamin Dinh</a>
 				<div class="theme-switch-wrapper-mobile"></div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
