--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="/#work">Work</a>
+							<a class="nav-link js-scroll-trigger inactive" href="/#work">Work</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 							<a class="nav-link js-scroll-trigger" href="#">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger categorytag" href="assets/BenjaminDinhResume.pdf">Resume</a>
+							<a class="nav-link js-scroll-trigger categorytag inactive" href="assets/BenjaminDinhResume.pdf">Resume</a>
 						</li>
 						<div class="theme-switch-wrapper">
 							<label class="theme-switch" for="checkbox">
