--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 							<a class="nav-link js-scroll-trigger" href="#work">Work</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="/about">About</a>
+							<a class="nav-link js-scroll-trigger inactive" href="/about">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger categorytag" href="assets/BenjaminDinhResume.pdf">Resume</a>
+							<a class="nav-link js-scroll-trigger categorytag inactive" href="assets/BenjaminDinhResume.pdf">Resume</a>
 						</li>
 						<div class="theme-switch-wrapper">
 							<label class="theme-switch" for="checkbox">
