--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
 	
-		<title>Benjamin Dinh</title>
+		<title>Benjamin Dinh | About</title>
 		<link rel="icon" href="assets/favicon.ico">
     </head>
     
