--- a/about.html
+++ b/about.html
@@ -50,13 +50,13 @@
 			<div class="profileContainer">
 				<div class="profileText">
                     <p class = "title_about">About Me</p>
-					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a third year at University of California, Davis studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
+					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a third year at <a class="hoverBold" href="https://www.ucdavis.edu/">University of California, Davis</a> studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
 					<p class="subtitle subtitle_about">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
 					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
                     <br>
                     <p class = "title_about">Fun Facts</p>
                     <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat Tigger, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape. </p>
-                    <p class="subtitle subtitle_about">Current anthem: Kiss Me More - Doja Cat, SZA </p>
+                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=0EVVKs6DQLo" >Kiss Me More</a> - Doja Cat, SZA </p>
                 </div>
 				<div id="profileImage" >
 					<!-- <img src="assets/memoji1.png" alt="Benjamin Dinh"> -->
