--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <br>
                     <p class = "title_about">Fun Facts</p>
                     <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat Tigger, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape. </p>
-                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=0EVVKs6DQLo" >Kiss Me More</a> - Doja Cat, SZA </p>
+                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=0EVVKs6DQLo" >Kiss Me More</a> by Doja Cat, SZA </p>
                 </div>
 				<div id="profileImage" >
 					<!-- <img src="assets/memoji1.png" alt="Benjamin Dinh"> -->
