--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="#work">Work</a>
+							<a class="nav-link js-scroll-trigger" href="#work">WORK</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger inactive" href="/about">About</a>
+							<a class="nav-link js-scroll-trigger inactive" href="/about">ABOUT</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger categorytag inactive" href="assets/BenjaminDinhResume.pdf">Resume</a>
+							<a class="nav-link js-scroll-trigger inactive" href="assets/BenjaminDinhResume.pdf">RESUME</a>
 						</li>
 						<div class="theme-switch-wrapper">
 							<label class="theme-switch" for="checkbox">
@@ -89,7 +89,7 @@
 					<div class = "projectSelect">
 						<div>
 							<h2>Tuberculosis Drug Resistance</h2>
-							<p class="subtitle_bold">A model that analyzes gene mutation signals for drug resistance</p>
+							<p class="subtitle_bold">A model to analyze gene mutation signals for drug resistance</p>
 							<p class="subtitle_date">Fall 2020</p>
 							<p class="subtitle">Collaborated with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
 						</div>
