added tigger href

--- a/about.html
+++ b/about.html
@@ -55,11 +55,10 @@
 					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
                     <br>
                     <p class = "title_about">Fun Facts</p>
-                    <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat Tigger, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape. </p>
+                    <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape.</p>
                     <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=0EVVKs6DQLo" >Kiss Me More</a> by Doja Cat, SZA </p>
                 </div>
 				<div id="profileImage" >
-					<!-- <img src="assets/memoji1.png" alt="Benjamin Dinh"> -->
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
 				</div>
 			</div>
