--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 			</nav>
 		</div>
 		<div id="leftIcons">
-			<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
-			<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-			<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
-			<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
+			<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
+			<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
+			<a href="https://www.behance.net/benjaminhdinh" class="fab fa-behance zoom"></a>
+			<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 		</div>
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Nice to meet you, <br> I'm <b id="name">Benjamin</b>.</h1>
 				<h1 id="headerSubText">I design and develop meaningful interactions and experiences.</h1>
-				<a class="categorytag" id="headertag" href="mailto:benjamindinh909@gmail.com">Get In Touch</a>
+				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
 				<a href = "#work" class="fa fa-angle-down fa-3x"></a>
@@ -82,7 +82,7 @@
 								<div class="projecttag">Firebase</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/meal-buddies"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/meal-buddies"></a>
 							</div>
 						</div>
 					</div>
@@ -100,7 +100,7 @@
 								<div class="projecttag">Tensorflow</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tuberculosis-drug-resistance"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/tuberculosis-drug-resistance"></a>
 							</div>
 						</div>
 					</div>	
@@ -121,7 +121,7 @@
 								<div class="projecttag">GSON</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/aggiefeed-android-app"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/aggiefeed-android-app"></a>
 							</div>
 						</div>
 					</div>
@@ -141,7 +141,7 @@
 								<div class="projecttag">Google Log-In</div>
 							</div>
 							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/ucdavis-yearbook"></a>
+								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/ucdavis-yearbook"></a>
 							</div>
 						</div>
 					</div>
@@ -172,7 +172,7 @@
 									<div class="projecttag">JavaScript</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/benjamin-dinh.github.io"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/benjamin-dinh.github.io"></a>
 								</div>
 							</div>
 						</div>
@@ -197,7 +197,7 @@
 									<div class="projecttag">NodeJS</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/include-website"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/include-website"></a>
 								</div>
 							</div>
 						</div>
@@ -223,7 +223,7 @@
 									<div class="projecttag">NLTK</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/tweet-sentiment-analysis/"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/tweet-sentiment-analysis/"></a>
 								</div>
 							</div>
 						</div>
@@ -245,7 +245,7 @@
 									<div class="projecttag">C++</div>
 								</div>
 								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjamin-dinh/spellchecker-trie"></a>
+									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/spellchecker-trie"></a>
 								</div>
 							</div>
 						</div>
@@ -256,10 +256,10 @@
 		
 		<section id="footer">
 			<div id="bottomIcons">
-				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
-				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
-				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
+				<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
+				<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
+				<a href="https://www.behance.net/benjaminhdinh" class="fab fa-behance zoom"></a>
+				<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
 		</section>
