--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <p class = "title_about">About Me</p>
 					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a third year at <a class="hoverBold" href="https://www.ucdavis.edu/">University of California, Davis</a> studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
 					<p class="subtitle subtitle_about">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
-					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjamin-dinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjamindinh909@gmail.com">email</a>, I would love to chat!</p>
+					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjaminhdinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjaminhdinh@gmail.com">email</a>, I would love to chat!</p>
                     <br>
                     <p class = "title_about">Fun Facts</p>
                     <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape.</p>
@@ -74,10 +74,10 @@
 		
 		<section id="footer">
 			<div id="bottomIcons">
-				<a href="https://www.linkedin.com/in/benjamin-dinh/" class="fab fa-linkedin zoom"></a>
-				<a href="https://github.com/benjamin-dinh" class="fab fa-github zoom"></a>
-				<a href="https://www.behance.net/benjamin-dinh" class="fab fa-behance zoom"></a>
-				<a href="mailto:benjamindinh909@gmail.com" class="fa fa-envelope zoom"></a>
+				<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
+				<a href="https://github.com/benjaminhdinh" class="fab fa-github zoom"></a>
+				<a href="https://www.behance.net/benjaminhdinh" class="fab fa-behance zoom"></a>
+				<a href="mailto:benjaminhdinh@gmail.com" class="fa fa-envelope zoom"></a>
 			</div>
 			<p id ="footerFont">© Benjamin Dinh <span id="year"></span></p>
 		</section>
