--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		</div>
 		<section id="header">
 			<div id="headerText" class="fadein">
-			  	<h1>Nice to meet you, <br> I'm <b id="name">Benjamin</b>.</h1>
-				<h1 id="headerSubText">I design and develop meaningful interactions and experiences.</h1>
+			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
+				<h1 id="headerSubText">I'm a product designer passionate about bringing users together through accessible and empathetic design. <br></h1>
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
