--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
-				<h1 id="headerSubText">I'm a product designer passionate about bringing users together through accessible and empathetic design. <br></h1>
+				<h1 id="headerSubText">I'm a product designer passionate about bringing users together through accessible and empathetic design.</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
