--- a/index.html
+++ b/index.html
@@ -54,202 +54,12 @@
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
-				<h1 id="headerSubText">I'm a user experience researcher and designer passionate about bringing users together through meaningful experiences.</h1>
+				<!-- <h1 id="headerSubText">I'm a user experience researcher and designer passionate about bringing users together through meaningful experiences.</h1> -->
+				<h1 id="headerSubText">I am currently working on my portfolio. Reach out to me to learn more about my work.</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
-			</div>
-			<div class="arrow bounce">
-				<a href = "#work" class="fa fa-angle-down fa-3x"></a>
 			</div>
 		</section>
 		<div id="work"></div>
-		<section>
-			<p class = "projectSectionTitle">Featured</p>
-			<div id="projectContainer">
-				<div class="row">
-					<div class = "projectSelect">
-						<div>
-							<h2>MealBuddies</h2>
-							<p class="subtitle_bold">A web application that targets food insecurity</p>
-							<p class="subtitle_date">January 2021</p>
-							<p class="subtitle">Managed a team of 2 designers and 2 developers in launching an online platform that consolidates food resources in Yolo County. Used a Firebase Realtime Database to store information about local food distributions, open pantries, restaurant giveaways, etc.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">Figma</div>
-								<div class="projecttag">HTML</div>
-								<div class="projecttag">CSS</div>
-								<div class="projecttag">NodeJS</div>
-								<div class="projecttag">Firebase</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/meal-buddies"></a>
-							</div>
-						</div>
-					</div>
-					<div class = "projectSelect">
-						<div>
-							<h2>Tuberculosis Drug Resistance</h2>
-							<p class="subtitle_bold">A model to analyze gene mutation signals for drug resistance</p>
-							<p class="subtitle_date">Fall 2020</p>
-							<p class="subtitle">Collaborated with 4 teammates to build 3 machine learning models that determine thresholds for gene mutation signals. Looked at whether molecular probes that detect these mutations yield high or low signals. Decision tree model achieved highest accuracy rate of 99%.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">Python</div>
-								<div class="projecttag">Sklearn</div>
-								<div class="projecttag">Tensorflow</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/tuberculosis-drug-resistance"></a>
-							</div>
-						</div>
-					</div>	
-				</div>
-				<div class="row">
-					<div class = "projectSelect">
-						<div>
-							<h2>AggieFeed</h2>
-							<p class="subtitle_bold">An Android application that delivers the latest university news</p>
-							<p class="subtitle_date">June 2020</p>
-							<p class="subtitle">Accessed a REST API to render university events, articles, announcements, and important dates for the home feed. Any element can be tapped on to show a more detailed view. Utilized OkHTTP requests and GSON data mapping.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">Android Studio</div>
-								<div class="projecttag">Kotlin</div>
-								<div class="projecttag">OkHTTP</div>
-								<div class="projecttag">GSON</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/aggiefeed-android-app"></a>
-							</div>
-						</div>
-					</div>
-					<div class = "projectSelect">
-						<div>
-							<h2>UC Davis Yearbook</h2>
-							<p class="subtitle_bold">A virtual place to store memories for the graduating class</p>
-							<p class="subtitle_date">May 2020</p>
-							<p class="subtitle">Directed 2 web developers in building a website where users can log in and upload personal profiles onto a virtual yearbook. Developed wireframes and assessed the user interface for technical feasibility. Built a profile feed that can be filtered by college, major, name, etc.</p>
-						</div>
-						<div class="buttonrow">
-							<div class ="tagrow">
-								<div class="projecttag">Figma</div>
-								<div class="projecttag">ReactJS</div>
-								<div class="projecttag">NodeJS</div>
-								<div class="projecttag">CSS</div>
-								<div class="projecttag">Google Log-In</div>
-							</div>
-							<div class="projectbuttons">
-								<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/ucdavis-yearbook"></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section id="archive">
-			<p class = "projectSectionTitle">More Fun Projects</p>
-			<div id = "projectArchiveContainer">
-				<div class="acc">
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
-								<h2>Personal Website</h2>
-								<p class="subtitle_date">December 2020</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">A portfolio website where I can express myself visually and play around with new design trends. Achieved 300% increase in monthly impressions and clicks after website redesign.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">Figma</div>
-									<div class="projecttag">HTML</div>
-									<div class="projecttag">CSS</div>
-									<div class="projecttag">JavaScript</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
-								<h2>includedavis.com</h2>
-								<p class="subtitle_date">August 2020</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">Communicated with the lead designer to understand necessary revisions to improve the usability, look, and feel of the old website. Worked with the back end director and achieved a new landing page, club calendar, testimonial section, and mobile responsivity. Achieved 150% increase in website traffic.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">Figma</div>
-									<div class="projecttag">HTML</div>
-									<div class="projecttag">CSS</div>
-									<div class="projecttag">NodeJS</div>
-								</div>
-								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/include-website"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-			  	</div>
-				<div class="acc">
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
-								<h2>Tweet Sentiment Analysis</h2>
-								<p class="subtitle_date">December 2020</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">Cleaned, normalized, and tokenized US airline tweets and created a term frequency-inverse document frequency (TF-IDF) matrix. Split the data into testing/training sets and performed logistic regression. Yielded an overall 80% accuracy rate.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">Python</div>
-									<div class="projecttag">Sklearn</div>
-									<div class="projecttag">NLTK</div>
-								</div>
-								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/tweet-sentiment-analysis/"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="projectArchive">
-						<div class="acc__title">
-							<div>
-								<h2>Spellchecker</h2>
-								<p class="subtitle_date">February 2020</p>
-							</div>
-							<div class="dropdownArrow">
-								<a class="fa fa-angle-down custom-down"></a>
-							</div>
-						</div>
-						<div class="acc__panel">
-							<p class="subtitle">An implementation of the trie data structure to detect misspelled words. A trie dictionary is first created from clean text, such as a book. Then, input from other text can be passed into the trie to detect misspellings and predict intended words.</p>
-							<div class="buttonrow">
-								<div class ="tagrow">
-									<div class="projecttag">C++</div>
-								</div>
-								<div class="projectbuttons">
-									<a class="fab fa-github zoom" href="https://github.com/benjaminhdinh/spellchecker-trie"></a>
-								</div>
-							</div>
-						</div>
-					</div>
-			  	</div>
-			</div>	
-		</section>
 		
 		<section id="footer">
 			<div id="bottomIcons">
