--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="#work">WORK</a>
+							<a class="nav-link js-scroll-trigger" href="#">HOME</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 							<a class="nav-link js-scroll-trigger inactive" href="/about">ABOUT</a>
@@ -53,7 +53,6 @@
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 		</section>
-		<div id="work"></div>
 		
 		<section id="footer">
 			<div id="bottomIcons">
