--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger inactive" href="/#work">WORK</a>
+							<a class="nav-link js-scroll-trigger inactive" href="/#">HOME</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 							<a class="nav-link js-scroll-trigger" href="#">ABOUT</a>
