got rid of everything

--- a/index.html
+++ b/index.html
@@ -27,13 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="#">HOME</a>
-						</li>
-						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger inactive" href="/about">ABOUT</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger inactive" href="assets/Benjamin_Dinh_Resume.pdf">RESUME</a>
+							<a class="nav-link js-scroll-trigger" href="mailto:benjaminhdinh@gmail.com">CONTACT</a>
 						</li>
 						<div class="theme-switch-wrapper">
 							<label class="theme-switch" for="checkbox">
@@ -47,13 +41,11 @@
 		</div>
 		<section id="header">
 			<div id="headerText" class="fadein">
-			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
-				<!-- <h1 id="headerSubText">I'm a user experience researcher and designer passionate about bringing users together through meaningful experiences.</h1> -->
-				<h1 id="headerSubText">I am currently working on my portfolio. Reach out to me to learn more about my work.</h1>
-				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
+			  	<h1>Hey, I'm <b id="name">Benjamin</b>!</h1>
+				<h1>I am a product designer.</h1>
+				<h1 id="headerSubText" style="font-style: italic">Currently working on my portfolio. Reach out to me to learn more about my work.</h1>
 			</div>
 		</section>
-		
 		<section id="footer">
 			<div id="bottomIcons">
 				<a href="https://www.linkedin.com/in/benjaminhdinh/" class="fab fa-linkedin zoom"></a>
