--- a/about.html
+++ b/about.html
@@ -27,13 +27,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger inactive" href="/#">HOME</a>
-						</li>
-						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="#">ABOUT</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger inactive" href="assets/Benjamin_Dinh_Resume.pdf">RESUME</a>
+							<a class="nav-link js-scroll-trigger" href="mailto:benjaminhdinh@gmail.com">CONTACT</a>
 						</li>
 						<div class="theme-switch-wrapper">
 							<label class="theme-switch" for="checkbox">
