--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<!-- meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="Hi, I'm Benjamin Dinh and I'm a third year at UC Davis studying Computer Science. Welcome to my personal website!">
+		<meta name="description" content="Learn more about me!">
 		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
         
 		<!-- style -->
