--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div id="headerText" class="fadein">
 			  	<h1>Hey, I'm <b id="name">Benjamin</b>!</h1>
 				<h1>I am a product designer.</h1>
-				<h1 id="headerSubText" style="font-style: italic">Currently working on my portfolio. Reach out to me to learn more about my work.</h1>
+				<h1 id="headerSubText" style="font-style: italic">Portfolio is currently under construction. Reach out to me to learn more about my work.</h1>
 			</div>
 		</section>
 		<section id="footer">
