--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<section id="header">
 			<div id="headerText" class="fadein">
 			  	<h1>Hey there, I'm <b id="name">Benjamin</b>!</h1>
-				<h1 id="headerSubText">I study Computer Science and I am passionate about bringing users together through meaningful experiences.</h1>
+				<h1 id="headerSubText">I study Computer Science at UC Davis and I am passionate about bringing users together through meaningful product experiences.</h1>
 				<a class="categorytag" id="headertag" href="mailto:benjaminhdinh@gmail.com">Get In Touch</a>
 			</div>
 			<div class="arrow bounce">
