--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <br>
                     <p class = "title_about">Fun Facts</p>
                     <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape.</p>
-                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=LIIDh-qI9oI">Save Your Tears</a> by The Weeknd & Ariana Grande</p>
+                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=Xmxcnf2v_gs">STEREOTYPE</a> by STAYC</p>
                 </div>
 				<div id="profileImage" >
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
