--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 							<a class="nav-link js-scroll-trigger inactive" href="/about">ABOUT</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link js-scroll-trigger inactive" href="assets/Benjamin_Dinh_Resume.pdf">RESUME</a>
-						</li>
+						</li> -->
 						<div class="theme-switch-wrapper">
 							<label class="theme-switch" for="checkbox">
 								<input type="checkbox" id="checkbox" />
