--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
 					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjaminhdinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjaminhdinh@gmail.com">email</a>, I would love to chat!</p>
                     <br>
                     <p class = "title_about">Fun Facts</p>
-                    <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a family trip to the beach, nature is my perfect escape.</p>
-                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=Xmxcnf2v_gs">STEREOTYPE</a> by STAYC</p>
+                    <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a long hike, nature is my perfect escape.</p>
+                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=2LJjtyNnOWc">In The Dark</a> by Swae Lee and Jhené Aiko</p>
                 </div>
 				<div id="profileImage" >
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
