--- a/about.html
+++ b/about.html
@@ -50,13 +50,13 @@
 			<div class="profileContainer">
 				<div class="profileText">
                     <p class = "title_about">About Me</p>
-					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a third year at <a class="hoverBold" href="https://www.ucdavis.edu/">University of California, Davis</a> studying Computer Science and minoring in Communication. My interests lie in making technology widely accessible and delivering unique product experiences.</p>
-					<p class="subtitle subtitle_about">It has been a long-standing goal of mine to use technology for the greater good of society. In an age of social media, it can be overwhelming to see software exploit human tendencies. I want to turn this around and build products that will enhance user experiences and truly make our lives better.</p>
+					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a graduating senior at <a class="hoverBold" href="https://www.ucdavis.edu/">University of California, Davis</a> studying Computer Science.</p>
+					<p class="subtitle subtitle_about">My passions include making technology accessible and delivering unique product experiences. I aim to build technology that can enhance human life while solving meaningful problems. I constantly yearn to learn more and take on new challenges.</p>
 					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjaminhdinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjaminhdinh@gmail.com">email</a>, I would love to chat!</p>
                     <br>
                     <p class = "title_about">Fun Facts</p>
                     <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a long hike, nature is my perfect escape.</p>
-                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=2LJjtyNnOWc">In The Dark</a> by Swae Lee and Jhené Aiko</p>
+                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=uPD0QOGTmMI">Die For You</a> by The Weeknd</p>
                 </div>
 				<div id="profileImage" >
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
