--- a/about.html
+++ b/about.html
@@ -54,9 +54,12 @@
 					<p class="subtitle subtitle_about">My passions include making technology accessible and delivering unique product experiences. I aim to build technology that can enhance human life while solving meaningful problems. I constantly yearn to learn more and take on new challenges.</p>
 					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjaminhdinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjaminhdinh@gmail.com">email</a>, I would love to chat!</p>
                     <br>
-                    <p class = "title_about">Fun Facts</p>
-                    <p class="subtitle subtitle_about">Away from the computer, you will likely find me chilling with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>, drinking an iced latte, or enjoying the great outdoors. Whether it's a short walk around the neighborhood or a long hike, nature is my perfect escape.</p>
-                    <p class="subtitle subtitle_about">Current anthem: <a class="hoverBold" href="https://www.youtube.com/watch?v=uPD0QOGTmMI">Die For You</a> by The Weeknd</p>
+                    <p class = "title_about">After Hours</p>
+                    <p class="subtitle subtitle_about">When I log off, you can find me:</p>
+					<p class="subtitle subtitle_about">Listening to my favorite <a class="hoverBold" href="https://open.spotify.com/playlist/79a7eH7yE02kUXBcTczEvk?si=4e968e33ad3541e9">KRNB</a> playlist.</p>
+					<p class="subtitle subtitle_about">Watching <a class="hoverBold" href="https://www.netflix.com/title/81205830">Search WWW</a> in bed with lots of snacks.</p>
+					<p class="subtitle subtitle_about">Playing <a class="hoverBold" href="https://www.playstation.com/en-us/games/sackboy-a-big-adventure/">Sackboy: A Big Adventure</a> all night with Diego.</p>
+					<p class="subtitle subtitle_about">Hanging with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
                 </div>
 				<div id="profileImage" >
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
