--- a/about.html
+++ b/about.html
@@ -56,9 +56,8 @@
                     <br>
                     <p class = "title_about">After Hours</p>
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
-					<p class="subtitle subtitle_about">Listening to my favorite <a class="hoverBold" href="https://open.spotify.com/playlist/79a7eH7yE02kUXBcTczEvk?si=4e968e33ad3541e9">KRNB</a> playlist.</p>
-					<p class="subtitle subtitle_about">Watching <a class="hoverBold" href="https://www.netflix.com/title/81205830">Search WWW</a> in bed with lots of snacks.</p>
-					<p class="subtitle subtitle_about">Playing <a class="hoverBold" href="https://www.playstation.com/en-us/games/sackboy-a-big-adventure/">Sackboy: A Big Adventure</a> all night with Diego.</p>
+					<p class="subtitle subtitle_about">Listening to my favorite <a class="hoverBold" href="https://open.spotify.com/playlist/4TOKYEPuKoJhvsB8Z3wf0X?si=9dc33915134f4eb3">Latin</a> playlist.</p>
+					<p class="subtitle subtitle_about">Learning <a class="hoverBold">Spanish</a> and enjoying new telenovelas.</p>
 					<p class="subtitle subtitle_about">Hanging with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
                 </div>
 				<div id="profileImage" >
