--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
                     <br>
                     <p class = "title_about">After Hours</p>
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
-					<p class="subtitle subtitle_about">Listening to my favorite <a class="hoverBold" href="https://open.spotify.com/playlist/4TOKYEPuKoJhvsB8Z3wf0X?si=9dc33915134f4eb3">Latin</a> playlist.</p>
-					<p class="subtitle subtitle_about">Learning <a class="hoverBold">Spanish</a> and enjoying new telenovelas.</p>
+					<p class="subtitle subtitle_about">Building a community and innovating at <a class="hoverBold" href="https://www.instagram.com/includedavis/">#include</a>.</p>
+					<p class="subtitle subtitle_about">Using my film camera to snap pictures of everything you can imagine.</p>
 					<p class="subtitle subtitle_about">Hanging with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
                 </div>
 				<div id="profileImage" >
