--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     <br>
                     <p class = "title_about">After Hours</p>
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
-					<p class="subtitle subtitle_about">Building a community and innovating at <a class="hoverBold" href="https://www.instagram.com/includedavis/">#include</a>.</p>
+					<p class="subtitle subtitle_about">Building community and product solutions at <a class="hoverBold" href="https://www.instagram.com/includedavis/">#include</a>.</p>
 					<p class="subtitle subtitle_about">Using my film camera to snap pictures of everything you can imagine.</p>
 					<p class="subtitle subtitle_about">Hanging with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
                 </div>
