--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
 					<p class="subtitle subtitle_about">Building community and product solutions at <a class="hoverBold" href="https://www.instagram.com/includedavis/">#include</a>.</p>
 					<p class="subtitle subtitle_about">Using my film camera to snap pictures of everything you can imagine.</p>
-					<p class="subtitle subtitle_about">Hanging with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
+					<p class="subtitle subtitle_about">Taking lots of naps with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
                 </div>
 				<div id="profileImage" >
 					<img src="assets/headshot.jpg" class="headshot circleShadow" alt="Benjamin Dinh">
