--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!">
 		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
-        <meta property='image' content="assets/preview.png"/>
+        <meta property='og:image' content="assets/preview.png"/>
 		<!-- style -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="main.css">
