--- a/about.html
+++ b/about.html
@@ -50,14 +50,14 @@
 			<div class="profileContainer">
 				<div class="profileText">
                     <p class = "title_about">About Me</p>
-					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a recent graduate from <a class="hoverBold" href="https://www.ucdavis.edu/">University of California, Davis</a> with a bachelor's degree in Computer Science.</p>
+					<p class="subtitle subtitle_about">Nice to meet you, I'm Benjamin! I'm a recent graduate from University of California, Davis with a bachelor's degree in Computer Science.</p>
 					<p class="subtitle subtitle_about">My passions include making technology accessible and delivering unique product experiences. I aim to build technology that can enhance human life while solving meaningful problems. I constantly yearn to learn more and take on new challenges.</p>
 					<p class="subtitle subtitle_about">Say hi over on <a class="hoverBold" href="https://www.linkedin.com/in/benjaminhdinh/">LinkedIn</a> or <a class="hoverBold" href="mailto:benjaminhdinh@gmail.com">email</a>, I would love to chat!</p>
                     <br>
                     <p class = "title_about">After Hours</p>
                     <p class="subtitle subtitle_about">When I log off, you can find me:</p>
 					<p class="subtitle subtitle_about">Building community and product solutions at <a class="hoverBold" href="https://www.instagram.com/includedavis/">#include</a>.</p>
-					<p class="subtitle subtitle_about">Using my film camera to snap pictures of everything you can imagine.</p>
+					<p class="subtitle subtitle_about">Using my film camera to snap <a class="hoverBold" href="https://www.instagram.com/benteafilm/">pictures</a> of everything you can imagine.</p>
 					<p class="subtitle subtitle_about">Taking lots of naps with my cat <a class="hoverBold" href="https://www.instagram.com/tiggersparty/">Tigger</a>.</p>
                 </div>
 				<div id="profileImage" >
