--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!">
 		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
-		<meta property=”og:title” content="Benjamin Dinh | Portfolio" />
-		<meta name=”image” property=”og:image” content="%PUBLIC_URL%/assets/preview.png"/>
-		<meta name=”author” content="Benjamin Dinh" />
-		<meta property=”og:description” content="Hi, I'm Benjamin Dinh. Welcome to my personal website!"/>
-		<meta property=”og:url” content="https://benjamindinh.com" />
+		<meta property="og:title" content="Benjamin Dinh | Portfolio" />
+		<meta name="image" property="og:image" content="%PUBLIC_URL%/assets/preview.png"/>
+		<meta name="author" content="Benjamin Dinh" />
+		<meta property="og:description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!"/>
+		<meta property="og:url" content="https://benjamindinh.com" />
+
 		<!-- style -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="main.css">
