--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 			<nav class="navbar navbar-fixed-top navbar-expand-lg navbar-light">
 				<a class="navbar-brand js-scroll-trigger" href="#" id="navigationName">Benjamin Dinh</a>
 				<div class="theme-switch-wrapper-mobile"></div>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
+				<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            
+					<span class="toggler-icon top-bar"></span>
+            		<span class="toggler-icon middle-bar"></span>
+            		<span class="toggler-icon bottom-bar"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
