--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
 				<a class="navbar-brand js-scroll-trigger" href="/" id="navigationName">Benjamin Dinh</a>
 				<div class="theme-switch-wrapper-mobile"></div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
+					<span class="toggler-icon top-bar"></span>
+            		<span class="toggler-icon middle-bar"></span>
+            		<span class="toggler-icon bottom-bar"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
