--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 							<a class="nav-link js-scroll-trigger" href="#">ABOUT</a>
 						</li>
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-							<a class="nav-link js-scroll-trigger" href="mailto:benjaminhdinh@gmail.com">CONTACT</a>
+							<a class="nav-link js-scroll-trigger inactive" href="mailto:benjaminhdinh@gmail.com">CONTACT</a>
 						</li>
 						<!-- <li class="nav-item">
 							<a class="nav-link js-scroll-trigger inactive" href="assets/Benjamin_Dinh_Resume.pdf">RESUME</a>
